--- a/dropwarnify/android/app/src/main/AndroidManifest.xml
+++ b/dropwarnify/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <application
         android:label="dropwarnify"
@@ -17,6 +20,7 @@
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
+
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
                  while the Flutter UI initializes. After that, this theme continues
@@ -24,13 +28,14 @@
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!-- 🔽🔽🔽 ADICIONADO: serviço que responde ao relógio com os contatos -->
+        <!-- 🔽🔽🔽 SERVIÇO QUE RESPONDE AO RELÓGIO COM OS CONTATOS -->
         <service
             android:name=".PhoneWearContactsService"
             android:exported="true">
@@ -38,7 +43,14 @@
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
         </service>
-        <!-- 🔼🔼🔼 FIM DO SERVIÇO -->
+        <!-- 🔼🔼🔼 FIM DO SERVIÇO DE CONTATOS -->
+
+        <!-- 🔽🔽🔽 NOVO: SERVIÇO DE DETECÇÃO DE QUEDAS EM FOREGROUND NO RELÓGIO -->
+        <service
+            android:name=".FallDetectionService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync">
+        </service>
 
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
