Atualização geral: serviços Wear OS, MobileHubPublisher e organização do projeto

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,6 @@
-org.gradle.jvmargs=-Xmx4G -Djava.io.tmpdir=C:/Users/Administrator/AppData/Local/Temp -Dorg.sqlite.tmpdir=C:/Users/Administrator/AppData/Local/Temp
+org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-17.0.17.10-hotspot
+org.gradle.jvmargs=-Xmx4096m -Djava.io.tmpdir=C:\\temp\\gradle -Dorg.sqlite.tmpdir=C:\\temp\\sqlite
+kapt.use.worker.api=false
+kapt.workers.isolation=none
 android.useAndroidX=true
 android.enableJetifier=true
