--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,61 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# =======================
+# FLUTTER / DART
+# =======================
 .dart_tool/
+.flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
+**/build/
+*.lock
+
+# Documentação gerada
+**/doc/api/
+
+# Cobertura
 /coverage/
 
-# Symbolication related
-app.*.symbols
+# =======================
+# ANDROID / KOTLIN
+# =======================
+android/local.properties
+**/local.properties
 
-# Obfuscation related
-app.*.map.json
+# Diretórios Gradle
+.gradle/
+*/.gradle/
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Artifacts Android Studio
+android/app/debug/
+android/app/profile/
+android/app/release/
+
+# =======================
+# EDITORES / IDE
+# =======================
+.idea/
+*.iml
+
+# Optional (VSCode)
+/.vscode/
+
+# =======================
+# ARQUIVOS TEMPORÁRIOS
+# =======================
+*.zip
+*.log
+*.tmp
+*.swp
+.DS_Store
+flutter_01.png
+
+# =======================
+# LINUX / MAC / WINDOWS
+# =======================
+*.class
+*.pyc
+.atom/
+.build/
+.history
